# Astro-Web

./: .env.example  .gitignore  CONFIG.md  README.md  database.toml  pyproject.toml  sampleenv
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/: initial-prompt.md
specs/001-hello-world-website/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hello-world-website/checklists/: requirements.md
specs/001-hello-world-website/contracts/: web-api.yaml
specs/002-display-sources-data/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-display-sources-data/checklists/: requirements.md
specs/003-nav-bar/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-source-inventory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-search-page/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-cone-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-spectra-display/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  config.py  main.py
src/database/: __init__.py  query.py  sources.py
src/routes/: __init__.py  web.py
src/static/: style.css
src/templates/: 404.html  base.html  browse.html  index.html  inventory.html  plot.html  search.html  search_results.html  spectra.html
src/visualizations/: __init__.py  scatter.py  spectra.py
(+11 files in other folders)
